# threads_lottery

./: .gitignore  CMakeLists.txt  FileLoader.c  FileLoader.h  LoteryScheduler.c  LoteryScheduler.h  ProgressbarList.c  ProgressbarList.h  Prueba.c  SharedState.c  SharedState.h  Thread.c  Thread.h  ThreadWork.c  ThreadWork.h  Thread_Callbacks.c  Thread_Callbacks.h  Timer.c  Timer.h  UI_Callbacks.c  UI_Callbacks.h  Viewer.c  Viewer.callbacks.c  Viewer.callbacks.c~  Viewer.callbacks.h  Viewer.c~  Viewer.h  main.c  main.c~  makefile  settingsFile  threadWork.c  viewer.ui
settings/: description  not_preemp-test  not_preemp-test1  not_preemp-test2  not_preemp-test3  not_preemp-test4  preemp-test  preemp-test1  preemp-test2  preemp-test3  preemp-test4  settingsFile
ui/: viewer.ui  viewer.ui~
